# lib/db/src/schema/index.ts
@@ -17,4 +17,6 @@
 //   export type InsertPost = z.infer<typeof insertPostSchema>;
 //   export type Post = typeof postsTable.$inferSelect;
 
+export * from "./projects";
+export * from "./tasks";
 export * from "./sessions";
